2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-dbus.[ch]:
	* src/libtracker-db/tracker-db-dbus.c:
	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.c:
	* tests/libtracker-common/tracker-dbus-test.c: Use a GQueue
	instead of a GAsyncQueue. We don't have any threads so there is no
	need for the extra locking overhead.

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-db.c:
	* src/trackerd/tracker-db.h:
	* src/libtracker-db/tracker-db-manager.c:
	* src/libtracker-db/tracker-db-manager.h:

	Commented out code that is simply never called

2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (crawler_finalize): Don't use
	g_free() to free a GFile. This is a hangover from when the files
	and directories queues had strings in them, now they have GFiles.

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-metadata.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-daemon.c:
	* src/trackerd/tracker-db.c:

	Various database connection usage improvements

	* src/libtracker-common/tracker-log.c:

	Added a perror() to find out about a race condition while writing to
	the log file

2008-07-02  Ivan Frade  <ivan.frade@nokia.com>

	* tests/Makefile.am
	* tests/tracker-indexer/Makefile.am
	* tests/tracker-indexer/tracker-index-test.c: Added tests to 
	tracker-index.
	
2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-module-config.c:
	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-monitor.c: Plugged leaks which took the
	memory lost from 1.8Mb (33,498 blocks) to 36 bytes (1 block). Good
	old valgrind!

2008-07-02  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (tracker_crawler_start):
	Actually set the path before checking if it exists or not, eek.

2008-07-02  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Memory leak fix
